@@ -1,2 +1,0 @@
-<!ENTITY title "FireGPG Result">
-<!ENTITY description "The result of the operation :">
